--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -55,3 +55,30 @@
     margin-top: 50px;
 
 }
+
+
+
+footer.main-footer .go-up {
+            width: 45px;
+            float: right;
+            position: fixed;
+            right: -10px;
+            bottom: 30px;
+            z-index: 10;
+            margin: 0;
+            padding: 0;
+            list-style: none
+        }
+
+footer.main-footer .go-up a {
+            display: inline-block;
+            width: 35px;
+            height: 35px;
+            text-align: center;
+            border-radius: 50%;
+            background: rgba(123, 123, 123, .5);
+            color: #fff;
+            font-size: 20px;
+            line-height: 35px;
+            padding: 0
+        }
